# saefarer

./: .gitignore  README.md  activations_store.py  config.py  environment-cpu.yml  environment-gpu.yml  environment.yml  example.ipynb  model.py  package-lock.json  package.json  pyproject.toml  sparse_autoencoder.py  train.py  training.ipynb  tsconfig.json  vite.config.ts
.github/workflows/: docs.yaml  release.yaml
docs/source/: conf.py  index.rst  ui.rst
examples/: tinystories-1m.py
examples/TinyStories-1M/: analyze.py  download_tokenize.py  train.py  widget.ipynb
js/: state.svelte.ts  style.css  synced-state.svelte.ts  types.ts  widget.ts
js/components/: FeatureTokenSequences.svelte  FeatureTokenSequencesTooltip.svelte  Features.svelte  Overview.svelte  Tabs.svelte  Tooltip.svelte  Widget.svelte
js/components/vis/: Axis.svelte  FeatureProjectionScatter.svelte  Histogram.svelte  Label.svelte  LineChart.svelte  axis.ts  vis-utils.ts
sparse_autoencoder/: activations_store.py  config.py  evaluate.py  feature_data.py  model.py  training.py
src/saefarer/: __init__.py  activations_store.py  analyze.py  analyzing.py  config.py  database.py  evaluate.py  feature_data.py  logger.py  model.py  tokenize_and_concat.py  training.py  types.py  utils.py  widget.py  widget_utils.py
src/tests/: test_utils.py  test_widget_utils.py
tests/: test_utils.py
