[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saefarer"
version = "0.0.0"
dependencies = [
    "anywidget",
    "torch",
    "transformers",
    "datasets",
    "einops",
    "numpy < 2",
    "umap-learn",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "watchfiles",
    "jupyterlab",
]
tensorboard = [
    "tensorboard",
]
wandb = [
    "wandb",
]

# automatically add the dev and logging features to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev", "tensorboard", "wandb"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/saefarer/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/saefarer/static/widget.js"]
skip-if-exists = ["src/saefarer/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.ruff]
extend-include = ["*.ipynb"]
